# cbas-ui

./: CMakeLists.txt  README.md  pluggable-ui-cbas.json.in
cbas-ui/: cbas.css  cbas.html  cbas.js  cbas_monitoring.html  cbas_samples.html  cbas_toplevel.html  cw_cbas_catalog_dialog.html  cw_cbas_collections_dialog.html  cw_cbas_controller.js  cw_cbas_database_dialog.html  cw_cbas_dataset_dialog.html  cw_cbas_iceberg_collection_dialog.html  cw_cbas_link_dialog.html  cw_cbas_map_collections_dialog.html  cw_cbas_monitor_controller.js  cw_cbas_samples_controller.js  cw_cbas_scope_dialog.html  cw_constants_service.js  cw_history_dialog.html  cw_plan_details_dialog.html  cw_prefs_dialog.html  cw_query_service.js  cw_request_details_dialog.html  head.frag.html  main.js  validate_cbas_service.js
cbas-ui/libs/ace/: mode-sql-plus-plus.js
docs/enterprise-analytics/spec/admin/: admin.yaml
docs/enterprise-analytics/spec/config/: config.yaml
docs/enterprise-analytics/spec/iceberg/: iceberg.yaml
docs/enterprise-analytics/spec/link/: link.yaml
docs/enterprise-analytics/spec/logging/: logging.yaml
docs/enterprise-analytics/spec/request/: request-result.yaml  request-status.yaml  request.yaml
docs/enterprise-analytics/spec/settings/: settings.yaml
